# ReminderAI

./: .clineignore  .env.sample  .gitignore  README.md  ai_handler.py  database.py  main.py  pyproject.toml  reminders.db  scheduler_handler.py  test_ai_parsing.py  voice_recorder.py
.clinerules/: project_structure.md
